[gd_scene load_steps=3 format=3 uid="uid://yqqqx4ggl5ls"]

[ext_resource type="Script" uid="uid://1j4uc7md3u0v" path="res://ui/DialogueEditor.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c88hulx3ptvny" path="res://ui/DialogueLineEditor.tscn" id="2_0xm2m"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ig7tw")

[node name="H" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JSONPreview" type="RichTextLabel" parent="H"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_mode = 2
selection_enabled = true

[node name="V" type="VBoxContainer" parent="H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="H" type="HBoxContainer" parent="H/V"]
layout_mode = 2

[node name="Control" type="Control" parent="H/V/H"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="H/V/H/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="V" type="VBoxContainer" parent="H/V/H"]
layout_mode = 2

[node name="LoadJSON" type="Button" parent="H/V/H/V"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Load"

[node name="SaveJSON" type="Button" parent="H/V/H/V"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Save"

[node name="AddNewEntry" type="Button" parent="H/V/H/V"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "AddNewEntry"

[node name="V" type="VBoxContainer" parent="H/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="M" type="MarginContainer" parent="H/V/V"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="H/V/V"]
layout_mode = 2
size_flags_vertical = 3

[node name="V" type="VBoxContainer" parent="H/V/V/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogueLineEditor" parent="H/V/V/ScrollContainer/V" instance=ExtResource("2_0xm2m")]
layout_mode = 2

[node name="ID" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="0"]
text = "ID"
editable = false

[node name="Speaker" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="1"]
text = "Speaker"
editable = false

[node name="Text" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="2"]
text = "Content / Dialogue key"
editable = false

[node name="Next" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="3"]
text = "Skip to"
editable = false

[node name="Choices" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="4"]
text = "Choices"
editable = false

[node name="Avatar" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="5"]
text = "Avatar"
editable = false

[node name="Event" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="6"]
text = "Event"
editable = false

[node name="DeleteButton" parent="H/V/V/ScrollContainer/V/DialogueLineEditor" index="7"]
disabled = true

[node name="M" type="MarginContainer" parent="H/V/V/ScrollContainer/V"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Entries" type="VBoxContainer" parent="H/V/V/ScrollContainer/V"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[editable path="H/V/V/ScrollContainer/V/DialogueLineEditor"]
